<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView android:id="@+id/textTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/txt_titulo"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />
    <ImageView android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="48dp"
        android:src="@mipmap/ic_launcher" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:orientation="horizontal">
        <EditText android:id="@+id/editLitroGasolina"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/txt_hint_litro_gasolina"
            android:inputType="numberDecimal"
            android:textColorHint="#8D6E63"
            android:textSize="16sp" />
        <EditText android:id="@+id/editLitroEtanol"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/txt_hint_litro_etanol"
            android:inputType="numberDecimal"
            android:textColorHint="#8D6E63"
            android:textSize="16sp" />
    </LinearLayout>
    <Button android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/azul_claro"
        android:text="@string/txt_hint_calcular"
        android:textColor="#283593"
        android:layout_marginBottom="24dp"/>
    <TextView android:id="@+id/textResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/resultado"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="48dp"/>
    <Button android:id="@+id/btnLimpar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/azul_claro"
        android:text="@string/txt_hint_limpar"
        android:textColor="#283593"

        />
    <Button android:id="@+id/btnSalvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/azul_claro"
        android:text="@string/txt_hint_salvar"
        android:textColor="#283593"
        android:enabled="false"
        />
    <Button  android:id="@+id/btnFinalizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/azul_claro"
        android:text="@string/txt_hint_finalizar"

        android:textColor="#283593" />


</androidx.appcompat.widget.LinearLayoutCompat>